Sonar: Fjerner ubrukte imports, renamer noe variabler til standard format, fjerner noen unødige public modifiers